dev/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-deployment
spec:
  selector:
    app: myapp
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
